@@ -7,140 +7,56 @@ Welcome to the official GitHub documentation for the research project **"Revolut
 
 ---
 
-## 📚 Overview
+## 📚 Project Summary
 
-This repository includes benchmark insights, code examples, performance analysis, and compatibility strategies for **Virtual Threads** introduced under **Project Loom**.
+This project explores the performance and practical application of **Virtual Threads** introduced by **Project Loom** in Java 21. It includes a comparative analysis between traditional platform threads and virtual threads using various workloads like:
 
-The objective is to demonstrate the **scalability**, **memory efficiency**, and **developer simplicity** virtual threads offer compared to traditional platform threads — particularly in **I/O-bound**, **CPU-bound**, and **mixed workload systems**.
+- I/O-bound tasks (e.g., result portals, network-based apps)
+- CPU-bound tasks (e.g., computational simulations)
+- Mixed workloads (e.g., IRCTC-style ticket booking)
 
----
-
-## 💡 Code & Implementation-Based Questions (Based on the Research Study)
-
-### 1. What is the syntax for creating a virtual thread in Java?
-
-Java 21+ supports creating virtual threads using the new `Thread.ofVirtual()` or the `Executors.newVirtualThreadPerTaskExecutor()` syntax.
-
-#### Example 1: Using `Thread.ofVirtual()`
-```java
-Thread vThread = Thread.ofVirtual().start(() -> {
-    System.out.println("Hello from virtual thread!");
-});
-```
-
-#### Example 2: Using ExecutorService
-```java
-ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
-executor.submit(() -> {
-    System.out.println("Running in a virtual thread.");
-});
-```
-This approach enables creating thousands of concurrent threads with minimal memory usage.  
-📖 *Reference: Section 2.2, 4.4*
+Key focus areas:
+- **Benchmarking throughput, memory usage, and latency**
+- **Thread pinning and how to avoid it**
+- **Structured concurrency with `StructuredTaskScope`**
+- **Real-world simulation: Chat system, ERP login flood, ticket booking**
 
 ---
 
-### 2. What is an example of structured concurrency in Java?
+## 🧪 Technologies Used
 
-Structured concurrency allows multiple concurrent tasks to be **scoped, managed, and cancelled** as a single logical unit.
-
-#### ✅ Example:
-```java
-try (var scope = new StructuredTaskScope.ShutdownOnFailure()) {
-    Future<String> user = scope.fork(() -> fetchUserDetails());
-    Future<String> order = scope.fork(() -> fetchOrderDetails());
-
-    scope.join();  // Wait for both tasks to complete
-
-    System.out.println(user.resultNow() + ", " + order.resultNow());
-}
-```
+- **Java 21 (Project Loom Preview)**
+- **VisualVM**, **JMeter**, **JFR**, **htop**
+- **StructuredTaskScope API**
+- **Executors.newVirtualThreadPerTaskExecutor()**
+- **ReentrantLock**, **R2DBC**, and Loom-compatible constructs
 
 ---
 
-### 3. Which legacy code constructs are compatible with virtual threads?
+## 📝 Research Highlights
 
-#### ✅ Compatible Constructs:
-- `Runnable`, `Callable`, `ExecutorService`
-- Blocking I/O APIs: `InputStream`, `Socket`, etc.
-- Traditional synchronous Java code
+- Achieved **11x higher throughput** in I/O-heavy use cases using virtual threads.
+- Demonstrated **~80% memory savings** in large-scale simulations.
+- Simulated **50,000+ concurrent users** in chat and ERP testbeds.
+- Identified thread pinning pitfalls and Loom optimization strategies.
 
-#### Example:
-```java
-Thread.ofVirtual().start(() -> {
-    try {
-        InputStream in = socket.getInputStream();
-        in.read();  // Blocking I/O — works seamlessly with virtual threads
-    } catch (IOException e) {
-        e.printStackTrace();
-    }
-});
-```
+For complete documentation, code walkthroughs, and live examples, visit the [💻 Blog](https://nextgenjavaconcurrency.adityadevraj699.online)
 
 ---
 
-### 4. What are the ways to avoid thread pinning in virtual threads?
+## 🙋 Author
 
-#### Strategies:
-| ❌ Avoid This                             | ✅ Use This Instead                         |
-|------------------------------------------|---------------------------------------------|
-| Wide `synchronized` blocks               | `ReentrantLock`                             |
-| `Object.wait()`                          | Structured concurrency                      |
-| Legacy JDBC                              | R2DBC or non-blocking libraries             |
-| JNI/native calls                         | Loom-aware replacements                     |
-
-#### Tools:
-- `-Djdk.tracePinnedThreads=true`
-- Java Flight Recorder (JFR)
-- VisualVM / `jstack`
-
-📖 *Reference: Section 4.6, 5.2*
-
----
-
-### 5. Where were virtual threads implemented in your project?
-
-#### Examples:
-- I/O-bound: Student portals, IRCTC simulation
-- Mixed workloads: Seat booking, OTP, fare
-- Chat system: 50K concurrent virtual threads
-- Student ERP: 10K login simulations
-
-📖 *Reference: Section 4.1, 4.3, 4.7*
-
----
-
-### 6. What are the implications of virtual threads on the JVM and the application?
-
-#### JVM Impact:
-- Threads managed by JVM (not OS)
-- Reduced memory per thread (~4KB–8KB)
-- Better context switching
-- Increased GC pressure due to heap-based stacks
-
-#### Application Impact:
-- Easier scaling (100K+ threads)
-- Simpler code (no async boilerplate)
-- New thinking: use `Executors.newVirtualThreadPerTaskExecutor()` instead of fixed thread pools
-
-📖 *Reference: Section 4.2, 4.3, 4.6, 5.1, 5.3*
-
----
-
-## 📎 Author
-
-- **Aditya Devraj**  
-  Final Year Student, B.Tech CSE  
-  Meerut Institute of Technology  
-  📧 [aditya.kumar1.cs.2022@mitmeerut.ac.in](mailto:aditya.kumar1.cs.2022@mitmeerut.ac.in)
+**Aditya Devraj**  
+Final Year Student, B.Tech CSE  
+Meerut Institute of Technology  
+📧 [aditya.kumar1.cs.2022@mitmeerut.ac.in](mailto:aditya.kumar1.cs.2022@mitmeerut.ac.in)
 
 ---
 
 ## 📌 License
 
-This research and code are provided under the **MIT License**.
+This research and source code are licensed under the **MIT License**.
 
 ---
 
-## ⭐ Star this repository if you found the research useful!
-
+## ⭐ If this helped you understand Java concurrency better, please consider starring the repo!
